# SmartVoucherDetection

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  PROGRESO.md  README.md  pyproject.toml
.atl/: skill-registry.md
.github/workflows/: build-plugin.yml  deploy-production.yml  deploy-staging.yml  lint.yml  tests-api.yml
api/: Dockerfile.dev  Dockerfile.prod  README.md  celery_app.py  config.py  database.py  main.py  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 34b207551c82_fase2_dedup_index_and_validacion_fk.py  607b4c53997b_initial_schema.py  a1b2c3d4e5f6_add_sospechoso_to_estado_check.py  a7f3b9c1d2e4_configuracion_sistema.py  a9c4f812b357_fase7_plan_quota.py  ba4e861e6950_seed_system_tenant.py  f3a8e2d1c094_add_token_api_prefix.py
api/dependencies/: __init__.py  auth_any.py  auth_api_key.py  auth_jwt.py
api/models/: __init__.py  _mixins.py  comprobante.py  configuracion_sistema.py  log_procesamiento.py  organizacion.py  seed.py  usuario.py  validacion.py
api/routers/: health.py  history.py  report.py  upload.py  upload_async.py  validate.py  web_auth.py  web_comprobantes.py  web_stats.py
api/schemas/: auth.py  comprobante.py  health.py  report.py  validacion.py  web.py
api/services/: __init__.py  cache_service.py  config_service.py  duplicate_service.py  image_service.py  jwt_service.py  ocr_service.py  parser_service.py  quota_service.py  state_machine.py  storage_service.py
api/tasks/: __init__.py  process_slip.py
api/tests/: __init__.py  conftest.py  test_acceptance_fase2.py  test_auth_jwt_dep.py  test_cache_service.py  test_celery_task.py  test_config.py  test_config_service.py  test_configuracion_sistema.py  test_database.py  test_duplicate_service.py  test_estado_validos.py  test_health_endpoint.py  test_history_endpoint.py  test_image_service.py  test_jwt_auth.py  test_ocr_service.py  test_quota_service.py  test_schemas_c1.py  test_state_machine.py  test_storage_service.py  test_token_api_prefix.py  test_upload_endpoint.py  test_upload_quota.py  test_validate_endpoint.py  test_web_auth_register.py  test_web_comprobantes.py  test_web_stats.py
api/tests/integration/: test_acceptance_fase2.py  test_auth_api_key.py  test_celery_task.py  test_database.py  test_jwt_auth.py  test_report_endpoint.py  test_upload_quota.py  test_web_auth_apikey.py  test_web_auth_register.py  test_web_comprobantes.py
api/tests/unit/: test_cache_service.py  test_config.py  test_duplicate_service.py  test_duplicate_service_weights.py  test_image_service.py  test_jwt_service.py  test_parser_service.py  test_storage_service.py
cosas/: BD.html
dataset/bancario-mx/: README.md
dataset/bancario-mx/ground-truth/: mx-001.json  mx-002.json  mx-003.json  mx-004.json  mx-005.json  mx-006.json  mx-007.json  mx-008.json  mx-009.json  mx-010.json  mx-011.json  mx-012.json  mx-013.json  mx-014.json  mx-015.json  mx-016.json  mx-017.json  mx-018.json  mx-019.json  mx-020.json  mx-021.json  mx-022.json  mx-023.json  mx-024.json  mx-025.json  mx-026.json  mx-027.json  mx-028.json  mx-029.json  mx-030.json
docs/: ARCHITECTURE.md  DEPLOYMENT.md  dataset-evaluation.md  git-flow.md  llama-server.md
infra/: Dockerfile.llama  docker-compose.prod.yml  docker-compose.yml  init-db.sql
infra/nginx/: nginx.conf
infra/scripts/: backup-db.sh  backup-images.sh  backup-redis.sh  compose-prod.sh  deploy.sh  generate_sample.py  seed_api_key.py  smoke_test_ocr.sh
openspec/: config.yaml  context.md
openspec/changes/: fase-2-design.md  fase-2-explore.md  fase-2-proposal.md  fase-2-tasks.md  fase-3-archive.md  fase-3-design.md  fase-3-explore.md  fase-3-proposal.md  fase-3-tasks.md  fase-3-verify.md  fase-4-archive.md  fase-4-design.md  fase-4-explore.md  fase-4-proposal.md  fase-4-tasks.md
openspec/specs/: fase-2-spec.md  fase-3-spec.md  fase-4-spec.md
plugin-wp/comprobantes-ocr/: .wp-env.json  PLUGIN-CHECK.md  comprobantes-ocr.php  package-lock.json  package.json  readme.txt  uninstall.php
plugin-wp/comprobantes-ocr/admin/: history-widget.php
plugin-wp/comprobantes-ocr/block/: block.json  package-lock.json  package.json
plugin-wp/comprobantes-ocr/includes/: class-api-client.php  class-gutenberg.php  class-history-widget.php  class-settings.php  class-shortcode.php  class-woo-hook.php
plugin-wp/comprobantes-ocr/languages/: comprobantes-ocr-en_US.mo  comprobantes-ocr-en_US.po  comprobantes-ocr-es_MX.mo  comprobantes-ocr-es_MX.po  comprobantes-ocr.pot
plugin-wp/comprobantes-ocr/public/: admin-settings.js  result-display.js  style.css  upload-handler.js
scripts/: README.md  _shared.py
scripts/anonymize/: anonymize_comprobante.py
scripts/augment/: faker_mx.py  generate_augmented.py  generate_duplicates.py  generate_synthetic.py
scripts/eval/: enrich_ocr_bancario.py  eval_duplicates_bancario.py  metrics_sroie.py  run_pipeline_sroie.py
webapp/: Dockerfile.prod  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.tsbuildinfo  vitest.config.ts
webapp/e2e/: auth.spec.ts  dashboard.spec.ts  historial.spec.ts  revision.spec.ts
webapp/src/: middleware.ts
webapp/src/app/: globals.css  (+1 more)
(+70 files in other folders)
