[project]
name = "smartvoucher-api"
version = "0.1.0"
description = "Backend FastAPI para SmartVoucherDetection: reconocimiento automatico de comprobantes de deposito con glm-ocr."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy[asyncio]>=2.0.49",
]
