[project]
name = "smartvoucher-api"
version = "0.1.0"
description = "Backend FastAPI para SmartVoucherDetection: reconocimiento automatico de comprobantes de deposito con glm-ocr."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "celery[redis]>=5.6.3",
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "opencv-python-headless>=4.13.0.92",
    "passlib[bcrypt]>=1.7.4",
    "pdf2image>=1.17.0",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "python-dateutil>=2.9.0.post0",
    "python-jose[cryptography]>=3.5.0",
    "python-levenshtein>=0.27.3",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.27",
    "redis>=6.4.0",
    "scikit-learn>=1.8.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
