[project]
name = "smartvoucher-api"
version = "0.1.0"
description = "Backend FastAPI para SmartVoucherDetection: reconocimiento automatico de comprobantes de deposito con glm-ocr."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "celery[redis]>=5.6.3",
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "opencv-python-headless>=4.13.0.92",
    "passlib[bcrypt]>=1.7.4",
    "pdf2image>=1.17.0",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "python-dateutil>=2.9.0.post0",
    "python-jose[cryptography]>=3.5.0",
    "python-levenshtein>=0.27.3",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.27",
    "redis>=6.4.0",
    "scikit-learn>=1.8.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "tenacity>=9.1.4",
    "uuid-utils>=0.14.1",
]

[project.optional-dependencies]
scripts = [
    "albumentations>=2.0.0",
    "numpy>=1.26.0",
    "faker>=26.0.0",
    "jinja2>=3.1.0",
    "playwright>=1.48.0",
]

[dependency-groups]
dev = [
    "fakeredis>=2.26.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"

# Coverage config (1.8.3).
#
# `core = "sysmon"` activa el tracer basado en `sys.monitoring` (Python 3.12+).
# Sin esto, el tracer clasico de coverage pierde lineas dentro de funciones
# async ejecutadas via ASGITransport — `routers/upload.py` reportaba 58%
# cuando en realidad el happy path SI ejecutaba todo el cuerpo (verificado
# por asserts contra DB real). Con sysmon sube a 88%+ que es la cifra real.
#
# `omit`: tests, alembic (autogenerated + boilerplate), seed (datos hardcoded
# probados implicitamente cuando se aplica la migracion).
[tool.coverage.run]
source = ["."]
core = "sysmon"
omit = [
    "tests/*",
    "alembic/*",
    "models/seed.py",
]

[tool.coverage.report]
# Threshold global (criterio 1.8.3 del PROGRESO: services/ >= 70%).
# Hoy estamos en ~96% global y >90% en cada service — el 70% es piso de
# regresion, no objetivo.
fail_under = 70
show_missing = true
skip_covered = false
exclude_also = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
